# mio

./: .gitignore
backend/: .env  index.js  package-lock.json  package.json
backend/api/authentication/: login.js  reCaptchaV2Verify.js  routes.js  signup.js
backend/api/channel/: createChannel.js  routes.js
backend/database/minio/: migrate.js  minio_connection.js
backend/database/minio/channel/: uploadLogo.js
backend/database/redis/: redis_connection.js
backend/database/redis/authentication/: getSession.js  storeSession.js
backend/database/scylla/: migrate.js  scylla_connection.js
backend/database/scylla/channel/: createChannel.js
backend/database/scylla/users/: createUser.js  retrieveUser.js
backend/middleware/: checkAuthentication.js
backend_webrtc_cpp/isolated_cmake_environment/: CMakeLists.txt
backend_webrtc_cpp/isolated_cmake_environment/src/: main.cpp  main.cpp.disabled
frontend/: package-lock.json  package.json
frontend/src/app/: AudioRecorder.js  page.js
frontend/src/app/auth/login/: page.js
frontend/src/app/auth/signup/: page.js
frontend/src/app/dashboard/channel/: page.js
